<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Map</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="icon">地图</string>
    <string name="login">登录</string>

    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>


    <string name="register_username">用户名</string>
    <string name="register_password">密码</string>
    <string name="register_confirm_password">再次输入密码</string>
    <string name="register">注册</string>



    <string name="home">地图</string>
    <string name="run">跑步</string>
    <string name="mine">我的</string>


</resources>
